--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ SECRET_KEY=kjasdhfshd33h2348hfdkjguywfgwy82736478jfbdsfvusdfj8347yru
 API_KEY=184748686744466
 API_SECRET=wFNRKhT-pYcAdrDGiJB_G5vn1Pc
 CLOUD_NAME=dpryfu2wr
+
+owner_key=manjit_singh
