--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,4 @@ API_KEY=184748686744466
 API_SECRET=wFNRKhT-pYcAdrDGiJB_G5vn1Pc
 CLOUD_NAME=dpryfu2wr
 
-owner_key=manjit_singh
+owner_key=manjitsingh
