--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,5 @@ API_SECRET=wFNRKhT-pYcAdrDGiJB_G5vn1Pc
 CLOUD_NAME=dpryfu2wr
 
 owner_key=manjitsingh
+
+mongodb+srv://manjitsingh13septem:manjitsingh13septem@cluster0.k8wzrwq.mongodb.net/skilzyy?retryWrites=true&w=majority&appName=Cluster0
