--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
 #MONGO_URI=mongodb+srv://manjitsyngh:manjitsyngh@cluster0.uikjz.mongodb.net/veganaya?retryWrites=true&w=majority&appName=Cluster0
-MONGO_URI=mongodb+srv://manjitsyngh:manjitsyngh@cluster0.uikjz.mongodb.net/veganaya?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://manjitsyngh:manjitsyngh@cluster0.uikjz.mongodb.net/veganaya?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://manjitsingh13septem:manjitsingh13septem@cluster0.k8wzrwq.mongodb.net/skilzyy?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
 SECRET_KEY=kjasdhfshd33h2348hfdkjguywfgwy82736478jfbdsfvusdfj8347yru
 API_KEY=184748686744466
@@ -9,5 +10,3 @@ API_SECRET=wFNRKhT-pYcAdrDGiJB_G5vn1Pc
 CLOUD_NAME=dpryfu2wr
 
 owner_key=manjitsingh
-
-mongodb+srv://manjitsingh13septem:manjitsingh13septem@cluster0.k8wzrwq.mongodb.net/skilzyy?retryWrites=true&w=majority&appName=Cluster0
