--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "nodemon api/index.js",
-        "start": "node api/index.js"
+        "start": "node api/index.js",
+        "test": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
